feat: add doctors controller

--- a/Clinic.Web/Views/Home/Index.cshtml
+++ b/Clinic.Web/Views/Home/Index.cshtml
@@ -89,7 +89,7 @@
 </section>
 
 <!-- ============================================================== -->
-<!-- Team -->
+<!-- Doctors -->
 <!-- ============================================================== -->
 <div class="spacer feature14">
     <div class="container">
@@ -109,7 +109,7 @@
             <div class="col-lg-3 col-md-6 wrap-feature14-box">
                 <div class="" data-aos="flip-left" data-aos-duration="1200">
                     <img class="rounded w-100"
-                         src="~/img/t1.jpg"
+                         src="~/img/doctors/t1.jpg"
                          alt="wrappixel kit" />
                     <div class="m-t-30">
                         <a href="./doctor-details.html"
@@ -130,7 +130,7 @@
             <div class="col-lg-3 col-md-6 wrap-feature14-box">
                 <div class="" data-aos="flip-left" data-aos-duration="1200">
                     <img class="rounded w-100"
-                         src="~/img/t2.jpg"
+                         src="~/img/doctors/t2.jpg"
                          alt="wrappixel kit" />
                     <div class="m-t-30">
                         <a href="./doctor-details.html"
@@ -152,7 +152,7 @@
             <div class="col-lg-3 col-md-6 wrap-feature14-box">
                 <div class="" data-aos="flip-left" data-aos-duration="1200">
                     <img class="rounded w-100"
-                         src="~/img/t3.jpg"
+                         src="~/img/doctors/t3.jpg"
                          alt="wrappixel kit" />
                     <div class="m-t-30">
                         <a href="./doctor-details.html"
@@ -174,7 +174,7 @@
             <div class="col-lg-3 col-md-6 wrap-feature14-box">
                 <div class="" data-aos="flip-left" data-aos-duration="1200">
                     <img class="rounded w-100"
-                         src="~/img/t4.jpg"
+                         src="~/img/doctors/t4.jpg"
                          alt="wrappixel kit" />
                     <div class="m-t-30">
                         <a href="./doctor-details.html"
@@ -197,7 +197,7 @@
 </div>
 
 <!-- ============================================================== -->
-<!-- Clinic offer -->
+<!-- Services -->
 <!-- ============================================================== -->
 <div class="bg-light spacer feature41">
     <div class="container">
@@ -295,7 +295,7 @@
                          id="home"
                          role="tabpanel"
                          aria-labelledby="home-tab">
-                        <img src="~/img/d1.jpg"
+                        <img src="~/img/services/d1.jpg"
                              alt="Medika"
                              class="rounded img-fluid" />
                         <p class="m-t-40">
@@ -312,7 +312,7 @@
                          id="profile"
                          role="tabpanel"
                          aria-labelledby="profile-tab">
-                        <img src="~/img/d2.jpg"
+                        <img src="~/img/services/d2.jpg"
                              alt="Medika"
                              class="rounded img-fluid" />
                         <p class="m-t-40">
@@ -329,7 +329,7 @@
                          id="dropdown1"
                          role="tabpanel"
                          aria-labelledby="dropdown1-tab">
-                        <img src="~/img/d1.jpg"
+                        <img src="~/img/services/d1.jpg"
                              alt="Medika"
                              class="rounded img-fluid" />
                         <p class="m-t-40">
@@ -346,7 +346,7 @@
                          id="ssd"
                          role="tabpanel"
                          aria-labelledby="ssd-tab">
-                        <img src="~/img/d2.jpg"
+                        <img src="~/img/services/d2.jpg"
                              alt="Medika"
                              class="rounded img-fluid" />
                         <p class="m-t-40">
