--- a/Clinic.Admin/wwwroot/css/site.css
+++ b/Clinic.Admin/wwwroot/css/site.css
@@ -16,3 +16,16 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+.form-group{
+    margin-bottom: 15px;
+}
+
+.control-label {
+    margin-bottom: 5px;
+    color: #0d6efd;
+}
+
+.table-actions{
+    width: 115px;
+}
