--- a/Clinic.Web/Views/Home/Index.cshtml
+++ b/Clinic.Web/Views/Home/Index.cshtml
@@ -106,92 +106,7 @@
         </div>
         <!-- row  -->
         <div class="row m-t-40 p-t-20">
-            <div class="col-lg-3 col-md-6 wrap-feature14-box">
-                <div class="" data-aos="flip-left" data-aos-duration="1200">
-                    <img class="rounded w-100"
-                         src="~/img/doctors/t1.jpg"
-                         alt="wrappixel kit" />
-                    <div class="m-t-30">
-                        <a href="./doctor-details.html"
-                           class="fw-medium m-border-0 link">Dr. Micheal Anderson</a>
-                        <h6 class="subtitle">Heart Sergeon</h6>
-                        <p class="m-t-20">
-                            You can relay on our amazing features list and also our
-                            customer services will be great.
-                        </p>
-                        <a href="./doctor-details.html"
-                           class="text-info fw-medium">
-                            Learn More
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <!-- Column -->
-            <div class="col-lg-3 col-md-6 wrap-feature14-box">
-                <div class="" data-aos="flip-left" data-aos-duration="1200">
-                    <img class="rounded w-100"
-                         src="~/img/doctors/t2.jpg"
-                         alt="wrappixel kit" />
-                    <div class="m-t-30">
-                        <a href="./doctor-details.html"
-                           class="fw-medium m-border-0 link">Dr. Julia D’Souza</a>
-                        <h6 class="subtitle">Family Physician</h6>
-                        <p class="m-t-20">
-                            You can relay on our amazing features list and also our
-                            customer services will be great.
-                        </p>
-                        <a href="./doctor-details.html"
-                           class="text-info fw-medium">
-                            Learn More
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <!-- Column -->
-            <!-- Column -->
-            <div class="col-lg-3 col-md-6 wrap-feature14-box">
-                <div class="" data-aos="flip-left" data-aos-duration="1200">
-                    <img class="rounded w-100"
-                         src="~/img/doctors/t3.jpg"
-                         alt="wrappixel kit" />
-                    <div class="m-t-30">
-                        <a href="./doctor-details.html"
-                           class="fw-medium m-border-0 link">Dr. Megan Doe</a>
-                        <h6 class="subtitle">Cancer Care Specialist</h6>
-                        <p class="m-t-20">
-                            You can relay on our amazing features list and also our
-                            customer services will be great.
-                        </p>
-                        <a href="./doctor-details.html"
-                           class="text-info fw-medium">
-                            Learn More
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <!-- Column -->
-            <!-- Column -->
-            <div class="col-lg-3 col-md-6 wrap-feature14-box">
-                <div class="" data-aos="flip-left" data-aos-duration="1200">
-                    <img class="rounded w-100"
-                         src="~/img/doctors/t4.jpg"
-                         alt="wrappixel kit" />
-                    <div class="m-t-30">
-                        <a href="./doctor-details.html"
-                           class="fw-medium m-border-0 link">Dr. Johnathan Birt</a>
-                        <h6 class="subtitle">General Care</h6>
-                        <p class="m-t-20">
-                            You can relay on our amazing features list and also our
-                            customer services will be great.
-                        </p>
-                        <a href="./doctor-details.html"
-                           class="text-info fw-medium">
-                            Learn More
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <!-- Column -->
+            @await Html.PartialAsync("Partial/DoctorsPartial",(IEnumerable<Clinic.Database.Data.Doctor>)ViewBag.ModelDoctor)
         </div>
     </div>
 </div>
