--- a/Clinic.Admin/Views/Home/Index.cshtml
+++ b/Clinic.Admin/Views/Home/Index.cshtml
@@ -3,6 +3,8 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <br /><br /><br />
+    <h1 class="display-4">Welcome to the Admin Site</h1>
+    <br /><br /><br />
+    <p><img src="~/img/logo.jpg"/></p>
 </div>
