--- a/Clinic.Admin/Views/Parameters/Create.cshtml
+++ b/Clinic.Admin/Views/Parameters/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Clinic.Database.Data.Page
+﻿@model Clinic.Database.Data.Parameter
 
 @{
     ViewData["Title"] = "Create";
@@ -13,19 +13,19 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="PageAnchorText" class="control-label"></label>
-                <input asp-for="PageAnchorText" class="form-control" />
-                <span asp-validation-for="PageAnchorText" class="text-danger"></span>
+                <label asp-for="Code" class="control-label"></label>
+                <input asp-for="Code" class="form-control" />
+                <span asp-validation-for="Code" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PageLink" class="control-label"></label>
-                <input asp-for="PageLink" class="form-control" />
-                <span asp-validation-for="PageLink" class="text-danger"></span>
+                <label asp-for="Name" class="control-label"></label>
+                <input asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PageLinkPosition" class="control-label"></label>
-                <input asp-for="PageLinkPosition" class="form-control" />
-                <span asp-validation-for="PageLinkPosition" class="text-danger"></span>
+                <label asp-for="Content" class="control-label"></label>
+                <input asp-for="Content" class="form-control" />
+                <span asp-validation-for="Content" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="WhoAdded" class="control-label"></label>
