--- a/Clinic.Admin/Views/Parameters/Delete.cshtml
+++ b/Clinic.Admin/Views/Parameters/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Clinic.Database.Data.Page
+﻿@model Clinic.Database.Data.Parameter
 
 @{
     ViewData["Title"] = "Delete";
@@ -12,22 +12,22 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PageAnchorText)
+            @Html.DisplayNameFor(model => model.Code)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PageAnchorText)
+            @Html.DisplayFor(model => model.Code)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PageLink)
+            @Html.DisplayNameFor(model => model.Name)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PageLink)
+            @Html.DisplayFor(model => model.Name)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PageLinkPosition)
+            @Html.DisplayNameFor(model => model.Content)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PageLinkPosition)
+            @Html.DisplayFor(model => model.Content)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.WhoAdded)
@@ -74,7 +74,7 @@
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="PageId" />
+        <input type="hidden" asp-for="ParameterId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
