--- a/Clinic.Admin/Views/Parameters/Details.cshtml
+++ b/Clinic.Admin/Views/Parameters/Details.cshtml
@@ -1,33 +1,32 @@
-﻿@model Clinic.Database.Data.Page
+﻿@model Clinic.Database.Data.Parameter
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Details";
 }
 
-<h1>Delete</h1>
+<h1>Details</h1>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Page</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PageAnchorText)
+            @Html.DisplayNameFor(model => model.Code)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PageAnchorText)
+            @Html.DisplayFor(model => model.Code)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PageLink)
+            @Html.DisplayNameFor(model => model.Name)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PageLink)
+            @Html.DisplayFor(model => model.Name)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PageLinkPosition)
+            @Html.DisplayNameFor(model => model.Content)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PageLinkPosition)
+            @Html.DisplayFor(model => model.Content)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.WhoAdded)
@@ -72,10 +71,8 @@
             @Html.DisplayFor(model => model.IsActive)
         </dd>
     </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="PageId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+</div>
+<div>
+    <a asp-action="Edit" asp-route-id="@Model?.ParameterId">Edit</a> |
+    <a asp-action="Index">Back to List</a>
 </div>
