--- a/Clinic.Admin/Views/Parameters/Edit.cshtml
+++ b/Clinic.Admin/Views/Parameters/Edit.cshtml
@@ -1,31 +1,32 @@
-﻿@model Clinic.Database.Data.Page
+﻿@model Clinic.Database.Data.Parameter
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Edit";
 }
 
-<h1>Create</h1>
+<h1>Edit</h1>
 
 <h4>Page</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="ParameterId" />
             <div class="form-group">
-                <label asp-for="PageAnchorText" class="control-label"></label>
-                <input asp-for="PageAnchorText" class="form-control" />
-                <span asp-validation-for="PageAnchorText" class="text-danger"></span>
+                <label asp-for="Code" class="control-label"></label>
+                <input asp-for="Code" class="form-control" />
+                <span asp-validation-for="Code" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PageLink" class="control-label"></label>
-                <input asp-for="PageLink" class="form-control" />
-                <span asp-validation-for="PageLink" class="text-danger"></span>
+                <label asp-for="Name" class="control-label"></label>
+                <input asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PageLinkPosition" class="control-label"></label>
-                <input asp-for="PageLinkPosition" class="form-control" />
-                <span asp-validation-for="PageLinkPosition" class="text-danger"></span>
+                <label asp-for="Content" class="control-label"></label>
+                <input asp-for="Content" class="form-control" />
+                <span asp-validation-for="Content" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="WhoAdded" class="control-label"></label>
@@ -63,7 +64,7 @@
                 <span asp-validation-for="IsActive" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
