refactor: move models to separate project Clinic.Models

--- a/Clinic.Admin/Views/Parameters/Index.cshtml
+++ b/Clinic.Admin/Views/Parameters/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Clinic.Database.Data.Parameter>
+﻿@model IEnumerable<Clinic.Models.Parameter>
 
 @{
     ViewData["Title"] = "Index";
