--- a/Clinic.Web/Views/Doctors/Partial/DoctorsPartial.cshtml
+++ b/Clinic.Web/Views/Doctors/Partial/DoctorsPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Clinic.Database.Data.Doctor>
+﻿@model IEnumerable<Clinic.Models.Doctor>
 
 @{
     var modelLength = Model.Count();
