--- a/Clinic.Web/Views/Doctors/Index.cshtml
+++ b/Clinic.Web/Views/Doctors/Index.cshtml
@@ -43,7 +43,7 @@
             </div>
         </div>
         <div class="container">
-            @await Html.PartialAsync("Partial/DoctorsPartial",(IEnumerable<Clinic.Database.Data.Doctor>)ViewBag.ModelDoctor)
+            @await Html.PartialAsync("Partial/DoctorsPartial",(IEnumerable<Clinic.Models.Doctor>)ViewBag.ModelDoctor)
         </div>
     </div>
 </div>
