--- a/Clinic.Web/Views/Shared/Partial/TopMenu.cshtml
+++ b/Clinic.Web/Views/Shared/Partial/TopMenu.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Clinic.Database.Data.Page>
+﻿@model IEnumerable<Clinic.Models.Page>
 
 <div class="hover-dropdown">
     <ul class="navbar-nav">
