refactor: move models to Clinic.Entities

--- a/Clinic.WebAdmin/Views/Parameters/Index.cshtml
+++ b/Clinic.WebAdmin/Views/Parameters/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Clinic.Models.Parameter>
+﻿@model IEnumerable<Clinic.Entities.Models.Parameter>
 
 @{
     ViewData["Title"] = "Index";
