--- a/Clinic.WebPatient/Views/_ViewImports.cshtml
+++ b/Clinic.WebPatient/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using Clinic.Web
-@using Clinic.Web.Models
+﻿@using Clinic.WebPatient
+@using Clinic.WebPatient.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
