--- a/Clinic.WebAdmin/Views/Shared/_Layout.cshtml
+++ b/Clinic.WebAdmin/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewData["Title"] - Clinic Admin</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/Clinic.Admin.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/Clinic.WebAdmin.styles.css" asp-append-version="true" />
 </head>
 <body>
     <header  class="container">
