--- a/Clinic.WebAdmin/Views/_ViewImports.cshtml
+++ b/Clinic.WebAdmin/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using Clinic.Admin
-@using Clinic.Admin.Models
+﻿@using Clinic.WebAdmin
+@using Clinic.WebAdmin.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
