--- a/Clinic.WebPatient/Views/Doctors/Partial/DoctorsPartial.cshtml
+++ b/Clinic.WebPatient/Views/Doctors/Partial/DoctorsPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Clinic.Models.Doctor>
+﻿@model IEnumerable<Clinic.Entities.Models.Doctor>
 
 @{
     var modelLength = Model.Count();
