--- a/Clinic.WebPatient/Views/Home/Index.cshtml
+++ b/Clinic.WebPatient/Views/Home/Index.cshtml
@@ -106,7 +106,7 @@
         </div>
         <!-- row  -->
         <div class="row m-t-40 p-t-20">
-            @await Html.PartialAsync("Partial/DoctorsPartial",(IEnumerable<Clinic.Models.Doctor>)ViewBag.ModelDoctor)
+            @await Html.PartialAsync("Partial/DoctorsPartial",(IEnumerable<Clinic.Entities.Models.Doctor>)ViewBag.ModelDoctor)
         </div>
     </div>
 </div>
