--- a/Clinic.WebPatient/Views/Home/Partial/DoctorsPartial.cshtml
+++ b/Clinic.WebPatient/Views/Home/Partial/DoctorsPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Clinic.Models.Doctor>
+﻿@model IEnumerable<Clinic.Entities.Models.Doctor>
 
 @foreach(var item in Model){
 <div class="col-lg-3 col-md-6 wrap-feature14-box">
