--- a/Clinic.WebPatient/Views/Shared/Partial/BottomMenu.cshtml
+++ b/Clinic.WebPatient/Views/Shared/Partial/BottomMenu.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Clinic.Models.Page>
+﻿@model IEnumerable<Clinic.Entities.Models.Page>
 
 <div class="col-lg-2 col-md-6">
     <ul class="general-listing">
